# tuva-seed-reader

./: README.md  pyproject.toml
tuva_seed_reader/: reader.py
